--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simulator",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.1.1",
     "expo": "~52.0.37",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-bottom-sheet": "^1.0.3",
+    "react-native-drawer-layout": "^4.1.1",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
